# bashCustomization

./: .gitignore  AGENTS.md  QUICK_REFERENCE.md  README.md  SSH_CONFIG.md  general_functions.sh  init.sh  init_repo.sh  main.sh  potential_insights.md  standard_settings.sh  test.sh  test2.sh  variables.sh
rust/: Cargo.toml  KNOWN_ISSUES.md
rust/src/: main.rs
rust/src/common/: command.rs  download.rs  mod.rs  package_manager.rs  platform.rs  privilege.rs  project_root.rs  version.rs
rust/src/configs/: check.rs  diff.rs  link.rs  manifest.rs  mod.rs  state.rs  status.rs  unlink.rs
rust/src/install/: azure.rs  base.rs  bat.rs  brew.rs  docker.rs  dotnet.rs  eza.rs  fd.rs  github.rs  go.rs  java.rs  javascript.rs  kubectl.rs  mod.rs  neovim.rs  nerd_font.rs  obsidian.rs  orchestrator.rs  postgres.rs  ripgrep.rs  rust_lang.rs  shellcheck.rs  terraform.rs
rust/src/install/tools/: azure.rs  base.rs  bat.rs  brew.rs  doas.rs  docker.rs  dotnet.rs  eza.rs  fd.rs  github.rs  go.rs  java.rs  javascript.rs  kubectl.rs  mod.rs  neovim.rs  nerd_font.rs  obsidian.rs  postgres.rs  ripgrep.rs  rust_lang.rs  shellcheck.rs  terraform.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: assertions.rs  container.rs  distro.rs  lib.rs
tests/e2e/tests/alpine/: doas.rs  dry_run.rs  main.rs  setup.rs  stub_messages.rs
tests/e2e/tests/arch/: dry_run.rs  setup.rs  stub_messages.rs
tests/e2e/tests/debian/: dry_run.rs  fast_installs.rs  full_installs.rs  main.rs  real_install.rs  setup.rs  symlinks.rs
tests/e2e/tests/fedora/: dry_run.rs  main.rs  setup.rs  stub_messages.rs
(+137 files in other folders)
